// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render should render component 1`] = `
<Fragment>
  <div
    className="explore-graph"
    id="graph"
    style={
      Object {
        "height": 100,
      }
    }
  />
  <GraphLegend
    displayMode="list"
    items={
      Array [
        Object {
          "color": undefined,
          "isVisible": true,
          "label": undefined,
          "yAxis": 1,
        },
        Object {
          "color": undefined,
          "isVisible": true,
          "label": undefined,
          "yAxis": 1,
        },
        Object {
          "color": undefined,
          "isVisible": true,
          "label": undefined,
          "yAxis": 1,
        },
        Object {
          "color": undefined,
          "isVisible": true,
          "label": undefined,
          "yAxis": 1,
        },
        Object {
          "color": undefined,
          "isVisible": true,
          "label": undefined,
          "yAxis": 1,
        },
        Object {
          "color": undefined,
          "isVisible": true,
          "label": undefined,
          "yAxis": 1,
        },
        Object {
          "color": undefined,
          "isVisible": true,
          "label": undefined,
          "yAxis": 1,
        },
        Object {
          "color": undefined,
          "isVisible": true,
          "label": undefined,
          "yAxis": 1,
        },
        Object {
          "color": undefined,
          "isVisible": true,
          "label": undefined,
          "yAxis": 1,
        },
        Object {
          "color": undefined,
          "isVisible": true,
          "label": undefined,
          "yAxis": 1,
        },
        Object {
          "color": undefined,
          "isVisible": true,
          "label": undefined,
          "yAxis": 1,
        },
        Object {
          "color": undefined,
          "isVisible": true,
          "label": undefined,
          "yAxis": 1,
        },
        Object {
          "color": undefined,
          "isVisible": true,
          "label": undefined,
          "yAxis": 1,
        },
        Object {
          "color": undefined,
          "isVisible": true,
          "label": undefined,
          "yAxis": 1,
        },
        Object {
          "color": undefined,
          "isVisible": true,
          "label": undefined,
          "yAxis": 1,
        },
        Object {
          "color": undefined,
          "isVisible": true,
          "label": undefined,
          "yAxis": 1,
        },
        Object {
          "color": undefined,
          "isVisible": true,
          "label": undefined,
          "yAxis": 1,
        },
        Object {
          "color": undefined,
          "isVisible": true,
          "label": undefined,
          "yAxis": 1,
        },
        Object {
          "color": undefined,
          "isVisible": true,
          "label": undefined,
          "yAxis": 1,
        },
      ]
    }
    onLabelClick={[Function]}
    placement="under"
  />
</Fragment>
`;

exports[`Render should render component with disclaimer 1`] = `
<Fragment>
  <div
    className="time-series-disclaimer"
  >
    <i
      className="fa fa-fw fa-warning disclaimer-icon"
    />
    Showing only 20 time series. 
    <span
      className="show-all-time-series"
      onClick={[Function]}
    >
      Show all 27
    </span>
  </div>
  <div
    className="explore-graph"
    id="graph"
    style={
      Object {
        "height": 100,
      }
    }
  />
  <GraphLegend
    displayMode="list"
    items={
      Array [
        Object {
          "color": undefined,
          "isVisible": true,
          "label": undefined,
          "yAxis": 1,
        },
        Object {
          "color": undefined,
          "isVisible": true,
          "label": undefined,
          "yAxis": 1,
        },
        Object {
          "color": undefined,
          "isVisible": true,
          "label": undefined,
          "yAxis": 1,
        },
        Object {
          "color": undefined,
          "isVisible": true,
          "label": undefined,
          "yAxis": 1,
        },
        Object {
          "color": undefined,
          "isVisible": true,
          "label": undefined,
          "yAxis": 1,
        },
        Object {
          "color": undefined,
          "isVisible": true,
          "label": undefined,
          "yAxis": 1,
        },
        Object {
          "color": undefined,
          "isVisible": true,
          "label": undefined,
          "yAxis": 1,
        },
        Object {
          "color": undefined,
          "isVisible": true,
          "label": undefined,
          "yAxis": 1,
        },
        Object {
          "color": undefined,
          "isVisible": true,
          "label": undefined,
          "yAxis": 1,
        },
        Object {
          "color": undefined,
          "isVisible": true,
          "label": undefined,
          "yAxis": 1,
        },
        Object {
          "color": undefined,
          "isVisible": true,
          "label": undefined,
          "yAxis": 1,
        },
        Object {
          "color": undefined,
          "isVisible": true,
          "label": undefined,
          "yAxis": 1,
        },
        Object {
          "color": undefined,
          "isVisible": true,
          "label": undefined,
          "yAxis": 1,
        },
        Object {
          "color": undefined,
          "isVisible": true,
          "label": undefined,
          "yAxis": 1,
        },
        Object {
          "color": undefined,
          "isVisible": true,
          "label": undefined,
          "yAxis": 1,
        },
        Object {
          "color": undefined,
          "isVisible": true,
          "label": undefined,
          "yAxis": 1,
        },
        Object {
          "color": undefined,
          "isVisible": true,
          "label": undefined,
          "yAxis": 1,
        },
        Object {
          "color": undefined,
          "isVisible": true,
          "label": undefined,
          "yAxis": 1,
        },
        Object {
          "color": undefined,
          "isVisible": true,
          "label": undefined,
          "yAxis": 1,
        },
        Object {
          "color": undefined,
          "isVisible": true,
          "label": undefined,
          "yAxis": 1,
        },
      ]
    }
    onLabelClick={[Function]}
    placement="under"
  />
</Fragment>
`;

exports[`Render should show query return no time series 1`] = `
<Fragment>
  <div
    className="explore-graph"
    id="graph"
    style={
      Object {
        "height": 100,
      }
    }
  />
  <GraphLegend
    displayMode="list"
    items={Array []}
    onLabelClick={[Function]}
    placement="under"
  />
</Fragment>
`;
